--- a/10_apendix2.tex
+++ b/10_apendix2.tex
@@ -7,6 +7,6 @@
 \begin{figure}[!htb]
 	\centering
 	\includegraphics[width=\linewidth]{figures/suppl2}
-	\caption{Gráficos de violín para marcadores conocidos en AD y GB}
+	\caption{Gráficos de violín para marcadores conocidos en la EA y el GB}
 	\label{fig:apx2}
 \end{figure}
