--- a/11_apendix3.tex
+++ b/11_apendix3.tex
@@ -4,12 +4,170 @@
 
 \chapter{}\label{apx:apx3}
 
-\begin{table}[!htb]
-	\centering
-	\caption{Los 100 principales genes que contribuyen al vector unitario a lo largo de PC1.}
-	\label{tab:apx3}
-	\begin{tabular}{|r|c|c||r|c|c|}
+%\begin{table}[!htb]
+%	\centering
+	
+	\begin{longtable}{|c|c||c|c|}
+		\caption{Los 100 principales genes que contribuyen al vector unitario a lo largo de PC1.\label{tab:apx3}}\\
+		
 		\hline
-		No & Gen & Peso en PC1 & No & Gen & Peso en PC1 \\ \hline
-	\end{tabular}
-\end{table}
+		Gen & PC1 & Gen & PC1 \\ \hline
+		\endhead
+		
+		RN7SL1 & 0.04 & WBSCR17 & -0.03 \\
+		\hline
+		RPPH1 & 0.03 & SV2B & -0.03 \\
+		\hline
+		RNU2-1 & 0.03 & SLC30A3 & -0.03 \\
+		\hline
+		SNORD3A & 0.03 & ATP1A3 & -0.03 \\
+		\hline
+		RNU1-2 & 0.03 & CPNE6 & -0.03 \\
+		\hline
+		RMRP & 0.03 & CAMK2A & -0.03 \\
+		\hline
+		RNU1-4 & 0.03 & SLC6A7 & -0.03 \\
+		\hline
+		RNU1-3 & 0.03 & GABRA1 & -0.03 \\
+		\hline
+		RNVU1-18 & 0.03 & KCNJ4 & -0.03 \\
+		\hline
+		RNU1-1 & 0.03 & CDK5R2 & -0.03 \\
+		\hline
+		SNORA73A & 0.02 & CALY & -0.03 \\
+		\hline
+		RNVU1-7 & 0.02 & GNG3 & -0.03 \\
+		\hline
+		RNU2-2P & 0.02 & CALB2 & -0.03 \\
+		\hline
+		WARS2-IT1 & 0.02 & CHD5 & -0.03 \\
+		\hline
+		VGF & -0.02 & VSNL1 & -0.03 \\
+		\hline
+		SLC12A5 & -0.02 & CRYM & -0.03 \\
+		\hline
+		HIPK4 & -0.02 & CCKBR & -0.03 \\
+		\hline
+		SSTR1 & -0.02 & NEUROD6 & -0.03 \\
+		\hline
+		CPLX1 & -0.02 & HRH3 & -0.03 \\
+		\hline
+		SYT5 & -0.02 & SYT1 & -0.03 \\
+		\hline
+		MIR657 & -0.02 & SNCB & -0.03 \\
+		\hline
+		INA & -0.02 & CHRM1 & -0.03 \\
+		\hline
+		CCK & -0.02 & MAL2 & -0.03 \\
+		\hline
+		GABRD & -0.02 & SNORD113-3 & -0.03 \\
+		\hline
+		MIR1249 & -0.02 & PNMA5 & -0.03 \\
+		\hline
+		WIF1 & -0.02 & CPLX2 & -0.03 \\
+		\hline
+		NECAB2 & -0.02 & TMEM130 & -0.03 \\
+		\hline
+		FBXL16 & -0.02 & LOC105373377 & -0.03 \\
+		\hline
+		GDA & -0.02 & SYN2 & -0.03 \\
+		\hline
+		KIAA1045 & -0.02 & SLC6A17 & -0.03 \\
+		\hline
+		SYNPR & -0.02 & ICAM5 & -0.03 \\
+		\hline
+		HMP19 & -0.02 & NEFL & -0.03 \\
+		\hline
+		CHGA & -0.02 & SYN1 & -0.03 \\
+		\hline
+		SNCG & -0.02 & C1QL3 & -0.03 \\
+		\hline
+		SVOP & -0.02 & NEFM & -0.03 \\
+		\hline
+		LRTM2 & -0.02 & DDN & -0.03 \\
+		\hline
+		WNT10B & -0.02 & FAM163B & -0.03 \\
+		\hline
+		MTND4P12 & -0.02 & GABRA5 & -0.03 \\
+		\hline
+		PHYHIP & -0.02 & NRGN & -0.03 \\
+		\hline
+		RAB3A & -0.02 & SLC32A1 & -0.03 \\
+		\hline
+		RASAL1 & -0.02 & SLC8A2 & -0.03 \\
+		\hline
+		HPCA & -0.03 & PACSIN1 & -0.03 \\
+		\hline
+		SERTM1 & -0.03 & SULT4A1 & -0.03 \\
+		\hline
+		GABRG2 & -0.03 & CACNG3 & -0.03 \\
+		\hline
+		CAMKV & -0.03 & GRIN1 & -0.03 \\
+		\hline
+		CREG2 & -0.03 & SLC17A7 & -0.03 \\
+		\hline
+		SNAP25 & -0.03 & PDYN & -0.03 \\
+		\hline
+		GAD2 & -0.03 & PRKCG & -0.03 \\
+		\hline
+		SYT13 & -0.03 & SST & -0.04 \\
+		\hline
+		KLK7 & -0.03 & MIR770 & -0.04 \\
+		\hline
+	\end{longtable}
+%\end{table}
+
+
+%\begin{tabular}{|r|c|c|r|c|c|r|c|c|r|c|c|}
+%	\hline
+%	1 & RN7SL1 & 0.04 & 26 & WIF1 & -0.02 & 51 & WBSCR17 & -0.03 & 76 & CPLX2 & -0.03 \\
+%	\hline
+%	2 & RPPH1 & 0.03 & 27 & NECAB2 & -0.02 & 52 & SV2B & -0.03 & 77 & TMEM130 & -0.03 \\
+%	\hline
+%	3 & RNU2-1 & 0.03 & 28 & FBXL16 & -0.02 & 53 & SLC30A3 & -0.03 & 78 & LOC105373377 & -0.03 \\
+%	\hline
+%	4 & SNORD3A & 0.03 & 29 & GDA & -0.02 & 54 & ATP1A3 & -0.03 & 79 & SYN2 & -0.03 \\
+%	\hline
+%	5 & RNU1-2 & 0.03 & 30 & KIAA1045 & -0.02 & 55 & CPNE6 & -0.03 & 80 & SLC6A17 & -0.03 \\
+%	\hline
+%	6 & RMRP & 0.03 & 31 & SYNPR & -0.02 & 56 & CAMK2A & -0.03 & 81 & ICAM5 & -0.03 \\
+%	\hline
+%	7 & RNU1-4 & 0.03 & 32 & HMP19 & -0.02 & 57 & SLC6A7 & -0.03 & 82 & NEFL & -0.03 \\
+%	\hline
+%	8 & RNU1-3 & 0.03 & 33 & CHGA & -0.02 & 58 & GABRA1 & -0.03 & 83 & SYN1 & -0.03 \\
+%	\hline
+%	9 & RNVU1-18 & 0.03 & 34 & SNCG & -0.02 & 59 & KCNJ4 & -0.03 & 84 & C1QL3 & -0.03 \\
+%	\hline
+%	10 & RNU1-1 & 0.03 & 35 & SVOP & -0.02 & 60 & CDK5R2 & -0.03 & 85 & NEFM & -0.03 \\
+%	\hline
+%	11 & SNORA73A & 0.02 & 36 & LRTM2 & -0.02 & 61 & CALY & -0.03 & 86 & DDN & -0.03 \\
+%	\hline
+%	12 & RNVU1-7 & 0.02 & 37 & WNT10B & -0.02 & 62 & GNG3 & -0.03 & 87 & FAM163B & -0.03 \\
+%	\hline
+%	13 & RNU2-2P & 0.02 & 38 & MTND4P12 & -0.02 & 63 & CALB2 & -0.03 & 88 & GABRA5 & -0.03 \\
+%	\hline
+%	14 & WARS2-IT1 & 0.02 & 39 & PHYHIP & -0.02 & 64 & CHD5 & -0.03 & 89 & NRGN & -0.03 \\
+%	\hline
+%	15 & VGF & -0.02 & 40 & RAB3A & -0.02 & 65 & VSNL1 & -0.03 & 90 & SLC32A1 & -0.03 \\
+%	\hline
+%	16 & SLC12A5 & -0.02 & 41 & RASAL1 & -0.02 & 66 & CRYM & -0.03 & 91 & SLC8A2 & -0.03 \\
+%	\hline
+%	17 & HIPK4 & -0.02 & 42 & HPCA & -0.03 & 67 & CCKBR & -0.03 & 92 & PACSIN1 & -0.03 \\
+%	\hline
+%	18 & SSTR1 & -0.02 & 43 & SERTM1 & -0.03 & 68 & NEUROD6 & -0.03 & 93 & SULT4A1 & -0.03 \\
+%	\hline
+%	19 & CPLX1 & -0.02 & 44 & GABRG2 & -0.03 & 69 & HRH3 & -0.03 & 94 & CACNG3 & -0.03 \\
+%	\hline
+%	20 & SYT5 & -0.02 & 45 & CAMKV & -0.03 & 70 & SYT1 & -0.03 & 95 & GRIN1 & -0.03 \\
+%	\hline
+%	21 & MIR657 & -0.02 & 46 & CREG2 & -0.03 & 71 & SNCB & -0.03 & 96 & SLC17A7 & -0.03 \\
+%	\hline
+%	22 & INA & -0.02 & 47 & SNAP25 & -0.03 & 72 & CHRM1 & -0.03 & 97 & PDYN & -0.03 \\
+%	\hline
+%	23 & CCK & -0.02 & 48 & GAD2 & -0.03 & 73 & MAL2 & -0.03 & 98 & PRKCG & -0.03 \\
+%	\hline
+%	24 & GABRD & -0.02 & 49 & SYT13 & -0.03 & 74 & SNORD113-3 & -0.03 & 99 & SST & -0.04 \\
+%	\hline
+%	25 & MIR1249 & -0.02 & 50 & KLK7 & -0.03 & 75 & PNMA5 & -0.03 & 100 & MIR770 & -0.04 \\
+%	\hline
+%\end{tabular}
