--- a/12_apendix4.tex
+++ b/12_apendix4.tex
@@ -6,16 +6,16 @@
 
 \begin{table}[!htb]
 	\centering
-	\caption{Los principales procesos de \textit{Reactome} relacionados con los 100 primeros genes en el ranking a lo largo de la dirección PC1}
+	\caption{Los principales procesos de \textit{Reactome} relacionados con los 100 primeros genes en el \textit{ranking} a lo largo de la dirección PC1}
 	\label{tab:apx4}
 	\begin{tabular}{|c|c|c|c|c|c|c|}
 		\hline
 		\multirow{2}{*}{Proceso} & \multicolumn{4}{c|}{Entidades} & \multicolumn{2}{c|}{Reacciones} \\ \cline{2-7}
-		 & encontrados & tasa & \textit{p-value} & FDR & encontrados & tasa \\ \hline
-		 Transmisión a través  & \multirow{2}{*}{$20/344$} & \multirow{2}{*}{$0.022$} & \multirow{2}{*}{$3.72 \times 10^{-13}$} & \multirow{2}{*}{$9.16 \times 10^{-11}$} & \multirow{2}{*}{$63/167$} & \multirow{2}{*}{$0.012$} \\
+		 & encontrado & tasa & \textit{p-value} & FDR & encontrado & tasa \\ \hline
+		 Transmisión a través  & \multirow{2}{*}{20/344} & \multirow{2}{*}{0.022} & \multirow{2}{*}{3.72e-13} & \multirow{2}{*}{9.16e-11} & \multirow{2}{*}{63/167} & \multirow{2}{*}{0.012} \\
 		 de sinapsis químicas & & & & & & \\ \hline
 		 
-		 Sistema neuronal & $20/490$ & $0.032$ & $1.97 \times 10 ^{-10}$ & $2.42 \times 10^{-08}$ & $72/221$ & $0.015$ \\ \hline
+		 Sistema neuronal & 20/490 & 0.032 & 1.97e-10 & 2.42e-08 & 72/221 & 0.015 \\ \hline
 		 
 		 
 	\end{tabular}
