--- a/13_apendix5.tex
+++ b/13_apendix5.tex
@@ -4,12 +4,116 @@
 
 \chapter{}\label{apx:apx5}
 
-\begin{table}[!htb]
-	\centering
-	\caption{Los 100 principales genes que contribuyen al vector unitario a lo largo de PC2.}
-	\label{tab:apx5}
-	\begin{tabular}{|r|c|c||r|c|c|}
+%\begin{table}[!htb]
+%	\centering
+	
+	\begin{longtable}{|c|c||c|c|}
+		\caption{Los 100 principales genes que contribuyen al vector unitario a lo largo de PC2.\label{tab:apx5}}\\
+		
 		\hline
-		No & Gen & Peso en PC1 & No & Gen & Peso en PC2 \\ \hline
-	\end{tabular}
-\end{table}
+		Gen & PC1 & Gen & PC1 \\ \hline
+		\endhead
+		
+		RN7SL1 & 0.05 & RPL37AP1 & -0.02 \\
+		\hline
+		RPPH1 & 0.04 & AURKB & -0.02 \\
+		\hline
+		RNU2-1 & 0.04 & FAUP1 & -0.02 \\
+		\hline
+		SNORD3A & 0.04 & MMP9 & -0.02 \\
+		\hline
+		RMRP & 0.04 & FTLP2 & -0.02 \\
+		\hline
+		RNU1-3 & 0.03 & RPL7P9 & -0.02 \\
+		\hline
+		RNU1-1 & 0.03 & GPX1P1 & -0.02 \\
+		\hline
+		RNU1-4 & 0.03 & CHI3L1 & -0.02 \\
+		\hline
+		RNVU1-18 & 0.03 & MIR621 & -0.02 \\
+		\hline
+		RNU1-2 & 0.03 & PI3 & -0.02 \\
+		\hline
+		SNORA73A & 0.03 & RPL6P27 & -0.02 \\
+		\hline
+		RNU2-2P & 0.03 & IGFBP2 & -0.02 \\
+		\hline
+		BCYRN1 & 0.03 & BIRC5 & -0.02 \\
+		\hline
+		LOC101928075 & 0.03 & TPI1P1 & -0.02 \\
+		\hline
+		RNY3 & 0.03 & FTH1P8 & -0.02 \\
+		\hline
+		SNORA63 & 0.03 & RPS27AP16 & -0.02 \\
+		\hline
+		RNVU1-7 & 0.03 & RPS27AP5 & -0.02 \\
+		\hline
+		SCARNA2 & 0.03 & LOC105369550 & -0.02 \\
+		\hline
+		SNORA48 & 0.02 & PLA2G2A & -0.02 \\
+		\hline
+		CYCSP30 & 0.02 & NDUFA4P1 & -0.02 \\
+		\hline
+		SCARNA10 & 0.02 & FTH1P2 & -0.02 \\
+		\hline
+		RN7SL2 & 0.02 & TMSB4XP8 & -0.02 \\
+		\hline
+		LOC729348 & 0.02 & RPL26P19 & -0.02 \\
+		\hline
+		SCARNA5 & 0.02 & COL1A1 & -0.02 \\
+		\hline
+		SCARNA7 & 0.02 & COX6A1P2 & -0.02 \\
+		\hline
+		SNORA81 & 0.02 & COL3A1 & -0.02 \\
+		\hline
+		SNORD97 & 0.02 & RPS27P4 & -0.02 \\
+		\hline
+		DNAJC19P8 & 0.02 & SAA1 & -0.02 \\
+		\hline
+		FCF1P1 & 0.02 & RPL14P1 & -0.02 \\
+		\hline
+		SNORA57 & 0.02 & RPS27P3 & -0.02 \\
+		\hline
+		SNORD10 & 0.02 & SNRPGP10 & -0.02 \\
+		\hline
+		SNORA49 & 0.02 & MT2P1 & -0.02 \\
+		\hline
+		SNORA54 & 0.02 & RPS3AP26 & -0.02 \\
+		\hline
+		RAB9AP2 & 0.02 & PBK & -0.02 \\
+		\hline
+		RAB9AP5 & 0.02 & TOP2A & -0.02 \\
+		\hline
+		RNY1 & 0.02 & CPXM1 & -0.02 \\
+		\hline
+		TPT1P9 & -0.02 & MIR3682 & -0.02 \\
+		\hline
+		RPL31P4 & -0.02 & RPS18P12 & -0.03 \\
+		\hline
+		RPL10P9 & -0.02 & RPS3AP6 & -0.03 \\
+		\hline
+		GAPDHP65 & -0.02 & SNRPGP2 & -0.03 \\
+		\hline
+		RPL12P4 & -0.02 & RPS7P1 & -0.03 \\
+		\hline
+		RPS20P14 & -0.02 & RPS15P4 & -0.03 \\
+		\hline
+		FAM64A & -0.02 & MYBL2 & -0.03 \\
+		\hline
+		RPS2P46 & -0.02 & RPL41P1 & -0.03 \\
+		\hline
+		RPS3AP5 & -0.02 & RPLP0P9 & -0.03 \\
+		\hline
+		RPL7P1 & -0.02 & UBE2C & -0.03 \\
+		\hline
+		YBX1P1 & -0.02 & RPL18AP3 & -0.03 \\
+		\hline
+		FTH1P7 & -0.02 & RPL39P3 & -0.03 \\
+		\hline
+		RPL35P5 & -0.02 & FTLP3 & -0.03 \\
+		\hline
+		RPL13AP25 & -0.02 & RPLP0P6 & -0.03 \\
+		\hline
+		
+	\end{longtable}
+%\end{table}
