--- a/14_apendix6.tex
+++ b/14_apendix6.tex
@@ -6,22 +6,48 @@
 
 \begin{table}[!htb]
 	\centering
-	\caption{Los principales procesos de \textit{Reactome} relacionados con los 100 primeros genes en el ranking a lo largo de la dirección PC2}
+	\caption{Los principales procesos de \textit{Reactome} relacionados con los 100 primeros genes en el \textit{ranking} a lo largo de la dirección PC2}
 	\label{tab:apx6}
 	\begin{tabular}{|c|c|c|c|c|c|c|}
 		\hline
 		\multirow{2}{*}{Proceso} & \multicolumn{4}{c|}{Entidades} & \multicolumn{2}{c|}{Reacciones} \\ \cline{2-7}
 		& encontrado & tasa & \textit{p-value} & FDR & encontrado & tasa \\ \hline
 		
-		G0 y G1 temprano & $4/38$ & $0.002$ & $1.58 \cdot 10 ^{-04}$ & $0.032$ & $4/27$ & $0.002$ \\ \hline
+		G0 y G1 temprano & 4/38 & 0.002 & 1.58e-04 & 0.032 & 4/27 & 0.002 \\ \hline
 		
-		TFAP2A actúa como un represor & \multirow{4}{*}{$20/344$} & \multirow{4}{*}{$0.022$} & \multirow{4}{*}{$3.72 \cdot 10^{-13}$} & \multirow{4}{*}{$9.16 \cdot 10^{-11}$} & \multirow{4}{*}{$63/167$} & \multirow{4}{*}{$0.012$} \\
-		transcripcional durante & & & & & & \\
-		la diferenciación celular & & & & & & \\
-		inducida por ácido retinoico  & & & & & & \\\hline
+		TFAP2A actúa como un & \multirow{5}{*}{20/344} & \multirow{5}{*}{0.022} & \multirow{5}{*}{3.72e-13} & \multirow{5}{*}{9.16e-11} & \multirow{5}{*}{63/167} & \multirow{5}{*}{0.012} \\
+		represor transcripcional & & & & & & \\
+		durante la diferenciación & & & & & & \\
+		celular inducida por & & & & & & \\
+		ácido retinoico & & & & & & \\\hline
 		
+		Señalización de interleucina-4 & \multirow{2}{*}{6/211} & \multirow{2}{*}{0.014} & \multirow{2}{*}{0.004} & \multirow{2}{*}{0.254} & \multirow{2}{*}{2/47} & \multirow{2}{*}{0.003} \\
+		e interleucina-13 & & & & & & \\\hline
 		
+		SUMOilación de proteínas & \multirow{2}{*}{3/50} & \multirow{2}{*}{0.003} & \multirow{2}{*}{0.005} & \multirow{2}{*}{0.272} & \multirow{2}{*}{4/8} & \multirow{2}{*}{5.52e-04} \\
+		de replicación del ADN & & & & & & \\\hline
 		
+		Transcripción de dianas E2F & \multirow{4}{*}{2/20} & \multirow{4}{*}{0.001} & \multirow{4}{*}{0.009} & \multirow{4}{*}{0.336} & \multirow{4}{*}{2/8} & \multirow{4}{*}{5.52e-04} \\
+		bajo control negativo por & & & & & & \\
+		p107 (RBL1) y p130 (RBL2) & & & & & & \\
+		en complejo con HDAC1 & & & & & & \\\hline
+		
+		Ensamblaje de fibrillas & \multirow{3}{*}{3/67} & \multirow{3}{*}{0.004} & \multirow{3}{*}{0.012} & \multirow{3}{*}{0.336} & \multirow{3}{*}{16/26} & \multirow{3}{*}{0.002} \\
+		de colágeno y otras & & & & & & \\
+		estructuras multiméricas & & & & & & \\\hline
+		
+		Degradación del colágeno & 3/69 & 0.004 & 0.013 & 0.336 & 16/34 & 0.002 \\\hline
+		
+		Transcripción de dianas E2F & \multirow{3}{*}{2/25} & \multirow{3}{*}{0.002} & \multirow{3}{*}{0.013} & \multirow{3}{*}{0.336} & \multirow{3}{*}{2/12} & \multirow{3}{*}{8.29e-04} \\
+		bajo control negativo por & & & & & & \\
+		el complejo DREAM & & & & & & \\\hline
+		
+		TP53 regula la transcripción & \multirow{6}{*}{2/28} & \multirow{6}{*}{0.002} & \multirow{6}{*}{0.017} & \multirow{6}{*}{0.355} & \multirow{6}{*}{2/19} & \multirow{6}{*}{0.001} \\
+		de varios genes de muerte & & & & & & \\
+		celular adicionales cuyas & & & & & & \\
+		funciones específicas en la & & & & & & \\
+		apoptosis dependiente de & & & & & & \\
+		p53 siguen siendo inciertas & & & & & & \\\hline
 		
 	\end{tabular}
 \end{table}
