--- a/7_cap3.tex
+++ b/7_cap3.tex
@@ -17,9 +17,9 @@ De hecho, el desplazamiento en esta dirección implica escalar parcialmente las 
 
 Vale la pena observar los principales genes involucrados en este proceso. Para ello, observamos el vector unitario a lo largo del eje PC1. Los genes se clasifican según su contribución al vector unitario. \alert{El procedimiento es similar al algoritmo de Page Rank \cite{Duhan_2009}. Lo usamos en nuestro trabajo anterior \cite{Gonzalez_2023}.}
 
-\alert{En la Tabla I del material suplementario} se encuentra una lista con los 100 primeros genes del ranking. Las amplitudes positivas definen genes cuya expresión aumenta con el desplazamiento a lo largo de la dirección positiva de PC1, mientras que las amplitudes negativas se refieren a genes silenciados. Estos genes deberían desempeñar simultáneamente un papel crucial en el envejecimiento, el GB y la EA.
+\alert{En la Tabla I del material suplementario} se encuentra una lista con los 100 primeros genes del \textit{ranking}. Las amplitudes positivas definen genes cuya expresión aumenta con el desplazamiento a lo largo de la dirección positiva de PC1, mientras que las amplitudes negativas se refieren a genes silenciados. Estos genes deberían desempeñar simultáneamente un papel crucial en el envejecimiento, el GB y la EA.
 
-Por supuesto, debido al valor puramente cualitativo de nuestro análisis, los genes, y especialmente el ranking, deben considerarse con cautela. Sin embargo, cabe destacar que 20 de los genes silenciados están relacionados con los procesos principales de transmisión a través de sinapsis químicas. \alert{En la Tabla Suplementaria II} se enumeran los procesos principales del \textit{Reactome} (\href{https://reactome.org/}{https://reactome.org/}) asociadas a estos genes \cite{Gillespie_2021}. Este conjunto incluye 56 genes anotados.
+Por supuesto, debido al valor puramente cualitativo de nuestro análisis, los genes, y especialmente el \textit{ranking}, deben considerarse con cautela. Sin embargo, cabe destacar que 20 de los genes silenciados están relacionados con los procesos principales de transmisión a través de sinapsis químicas. \alert{En la Tabla Suplementaria II} se enumeran los procesos principales del \textit{Reactome} (\href{https://reactome.org/}{https://reactome.org/}) asociadas a estos genes \cite{Gillespie_2021}. Este conjunto incluye 56 genes anotados.
 
 La disminución de la función sináptica es una característica conocida del cerebro envejecido, según la revisión \cite{Ham_2020}. La segunda característica principal, según esta referencia, es un aumento de la función inmunitaria, que no es particularmente evidente en nuestro conjunto de genes. En cambio, observamos genes relacionados con la neurotoxicidad de las toxinas de clostridium \cite{Biazzo_2022}, con la disminución de la actividad mitocondrial \cite{Sun_2016}, micro ARN compartidos entre la EA y el GB \cite{Thomas_2020}, etc.
 
@@ -33,7 +33,7 @@ De hecho, la EA y el GB aparecen en semiplanos opuestos. La evidencia clínica \
 
 Los procesos de \textit{Reactome} relacionadas con estos genes se muestran en la \alert{Tabla IV del material suplementario}. Se relacionan principalmente con el control del ciclo celular, la replicación del ADN, la apoptosis, la modificación de la matriz extracelular, etc., es decir, con las características distintivas del cáncer \cite{Hanahan_2000, Hanahan_2011, Hanahan_2022}.
 
-Anteriormente, mencionamos MMP9 como un ejemplo de genes que desempeñan funciones opuestas en el GB y la EA. El gen codificador de la proteína UBE2C es otro gen conocido con esta característica \cite{MA_2016, Jaladanki_2021}. Por otro lado, el gen BCYRN1, también entre los primeros 100 genes del ranking, parece estar subexpresado en GB \cite{Mu2021} y sobreexpresado en la EA \cite{Zhang_2021}. La Fig. \ref{fig:fig1d} muestra gráficos de violín para la expresión diferencial de los genes MMP9 y BCYRN1 en muestras de N, GB y la EA.
+Anteriormente, mencionamos MMP9 como un ejemplo de genes que desempeñan funciones opuestas en el GB y la EA. El gen codificador de la proteína UBE2C es otro gen conocido con esta característica \cite{MA_2016, Jaladanki_2021}. Por otro lado, el gen BCYRN1, también entre los primeros 100 genes del \textit{ranking}, parece estar subexpresado en GB \cite{Mu2021} y sobreexpresado en la EA \cite{Zhang_2021}. La Fig. \ref{fig:fig1d} muestra gráficos de violín para la expresión diferencial de los genes MMP9 y BCYRN1 en muestras de N, GB y la EA.
 
 \begin{figure}[!htb]
 	\centering
@@ -83,8 +83,16 @@ Como se mencionó anteriormente, la afirmación sobre el corredor de envejecimie
 
 \section{Perspectiva cuantitativa}
 
-Debido al carácter cualitativo de nuestro estudio, el análisis de genes y procesos relevantes no se aborda adecuadamente en este artículo. Sin embargo, analicemos cualitativamente siete marcadores conocidos para la EA y el GB según nuestro esquema. Los gráficos de violín para estos genes se muestran en \alert{la Figura 2 del Suplemento}. La figura muestra que los genes MAPT (proteína tau \cite{Strang_2019}) y APP (beta amiloide \cite{TCW_2016}) están subexpresados tanto en el GB como en la EA y, por lo tanto, según nuestro esquema, son genes tipo PC1, principalmente relacionados con el envejecimiento. En cierto modo, esto concuerda con los hallazgos del estudio del Instituto Allen sobre los patrones de proteína tau y placas amiloides en el cerebro envejecido. Por supuesto, ciertas mutaciones de estos genes podrían conducir a un envejecimiento cerebral acelerado y a la aparición temprana de la EA. El gen APOE \cite{Raulin_2022}, por el contrario, está desregulado inversamente en el GB y la EA. Es un gen del tipo PC2.
+Debido al carácter cualitativo de nuestro estudio, el análisis de genes y procesos relevantes no se aborda adecuadamente en este artículo. Sin embargo, analicemos cualitativamente siete marcadores conocidos para la EA y el GB según nuestro esquema. Los gráficos de violín para estos genes se muestran en Fig. \ref{fig:violin}. La figura muestra que los genes MAPT (proteína tau \cite{Strang_2019}) y APP (beta amiloide \cite{TCW_2016}) están subexpresados tanto en el GB como en la EA y, por lo tanto, según nuestro esquema, son genes tipo PC1, principalmente relacionados con el envejecimiento. En cierto modo, esto concuerda con los hallazgos del estudio del Instituto Allen sobre los patrones de proteína tau y placas amiloides en el cerebro envejecido. Por supuesto, ciertas mutaciones de estos genes podrían conducir a un envejecimiento cerebral acelerado y a la aparición temprana de la EA. El gen APOE \cite{Raulin_2022}, por el contrario, está desregulado inversamente en el GB y la EA. Es un gen del tipo PC2.
+
+\begin{figure}[!htb]
+	\centering
+	\includegraphics[width=\linewidth]{figures/suppl2}
+	\caption{Gráficos de violín para marcadores conocidos en la EA y el GB}
+	\label{fig:violin}
+\end{figure}
 
 Por otro lado, el marcador IDH1 \cite{Cohen_2013} está sobreexpresado en la GB, pero es irrelevante en la EA. Los tres marcadores de GB, IDH2 \cite{Cohen_2013}, MKI67 \cite{Chen_2015} y ATRX \cite{Haase_2018}, son genes similares a PC2. Se han estudiado principalmente en relación con la GB, pero el hecho de que sean genes PC2 indica que podrían desempeñar un papel importante también en la EA.
 
 Consideremos, como último ejemplo, la reciente demostración de la relevancia de TREM2 en la EA \cite{van_Lengerich_2023}. Se ha demostrado que la activación de TREM2 en la EA mejora el metabolismo microglial. Según nuestro análisis, TREM2 es un gen PC2, subexpresado en la EA y sobreexpresado en el GB. Por lo tanto, esperamos que la inhibición de TREM2 en células de glioma pueda tener un efecto importante en el GB. Este hecho, según nuestro sencillo esquema, se encuentra actualmente en estudio \cite{Sun_2023}.
+
