--- a/8_conclusiones.tex
+++ b/8_conclusiones.tex
@@ -1,6 +1,6 @@
 % !TeX root = Tesis.tex
 % !TeX encoding = UTF-8
-% !TeX spellcheck = es_ES
+% !TeX spellcheck = es
 \chapter*{Conclusiones}\label{conclutions}
 \addcontentsline{toc}{chapter}{Conclusiones}
 \onehalfspacing
@@ -14,6 +14,10 @@ Cabe destacar que incluso datos o métodos computacionales más refinados no pod
 
 \chapter*{Recomendaciones}\label{recomendations}
 \addcontentsline{toc}{chapter}{Recomendaciones}
+
+%TODO: Aquí se puede incluir la propuesta de comprobar los resultados de forma experimental, haciendo alución a que en un modelo de ratón no debe ser muy complicado.
+
+%TODO: También se podría hacer una simulación para comprobar que debe haber una presión selectiva que marque la ruta que debe seguir un sistema en el camino hacia el envejecimiento, evitando el fuerte atractor del GB
 
 El diagrama de la Fig. \ref{fig:fig1a} debe completarse con datos correspondientes a otros tipos de demencia o trastornos cerebrales. En particular, se espera un área de la enfermedad de Parkinson cercana al atractor de la EA y opuesta al GB \cite{Mencke_2020}. El panorama completo puede revelar una topología aún más precisa del espacio de expresión genética y un diagrama de Wright más completo.
 
