--- a/Tesis.tex
+++ b/Tesis.tex
@@ -18,6 +18,7 @@
 
 \usepackage{lipsum}
 \usepackage{float}
+\usepackage{longtable}
 
 %\usepackage{natbib} % use author/date bibliographic citations
 \usepackage{cite}
@@ -147,11 +148,12 @@
 %	\section*{Apéndices}
 	\addcontentsline{toc}{chapter}{Apéndices}
 	\input{./9_apendix1}
-	\input{./10_apendix2}
+%	\input{./10_apendix2}
 	\input{./11_apendix3}
 	\input{./12_apendix4}
 	\input{./13_apendix5}
 	\input{./14_apendix6}
+	\input{./15_apendix7}
 
 	\backmatter
 
