--- a/11_apendix3.tex
+++ b/11_apendix3.tex
@@ -2,7 +2,7 @@
 % !TeX spellcheck = es
 % !TeX encoding = UTF-8
 
-\chapter{}\label{apx:apx3}
+\chapter{Eje PC1 (envejecimiento)}\label{apx:apx3}
 
 %\begin{table}[!htb]
 %	\centering
