--- a/12_apendix4.tex
+++ b/12_apendix4.tex
@@ -2,7 +2,7 @@
 % !TeX spellcheck = es
 % !TeX encoding = UTF-8
 
-\chapter{}\label{apx:apx4}
+%\chapter{}\label{apx:apx4}
 
 \begin{table}[!htb]
 	\centering
