--- a/13_apendix5.tex
+++ b/13_apendix5.tex
@@ -2,7 +2,7 @@
 % !TeX spellcheck = es
 % !TeX encoding = UTF-8
 
-\chapter{}\label{apx:apx5}
+\chapter{Eje PC2 (GB vs. EA)}\label{apx:apx5}
 
 %\begin{table}[!htb]
 %	\centering
