--- a/9_apendix1.tex
+++ b/9_apendix1.tex
@@ -1,7 +1,7 @@
 % !TeX root = Tesis.tex
 % !TeX spellcheck = es
 % !TeX encoding = UTF-8
-\chapter{}
+\chapter{Modelo de ratón para el envejecimiento}
 \label{apx:apx1}
 
 \begin{figure}[!htb]
