--- a/Tesis.tex
+++ b/Tesis.tex
@@ -134,18 +134,11 @@
 %    \input{./cap4}
     \input{./8_conclusiones}
 
-	
-     %\input{./Pseudocodigo}
-%     \input{./Ajuste}
-     %Si hay más apéndices, solo los agregas
-     
-
-
-
-
 	\singlespacing
+	\newpage
 	\appendix
 %	\section*{Apéndices}
+	\label{apx}
 	\addcontentsline{toc}{chapter}{Apéndices}
 	\input{./9_apendix1}
 %	\input{./10_apendix2}
