--- a/14_apendix6.tex
+++ b/14_apendix6.tex
@@ -2,7 +2,7 @@
 % !TeX spellcheck = es
 % !TeX encoding = UTF-8
 
-\chapter{}\label{apx:apx6}
+%\chapter{}\label{apx:apx6}
 
 \begin{table}[!htb]
 	\centering
