--- a/15_apendix7.tex
+++ b/15_apendix7.tex
@@ -2,7 +2,7 @@
 % !TeX spellcheck = es
 % !TeX encoding = UTF-8
 
-\chapter{}\label{apx:apx7}
+\chapter{Transición de O a la EA}\label{apx:apx7}
 
 \begin{table}[!htb]
 	\centering
